# jni_actoin

./: LICENSE  README.md  businesspack_map.suml  settings.gradle  tasdkmap.suml
Hello/app/: CMakeLists.txt  build.gradle
Hello/app/callbacks/: BaseCallback.cpp  BaseCallback.h  BaseCallbackInt.cpp  BaseCallbackInt.h  BaseCallbackObject.cpp  BaseCallbackObject.h  BaseCallbackObjectArray.cpp  BaseCallbackObjectArray.h  TeamCallback.cpp  TeamCallback.h
Hello/app/sdkout/: androidSdkOut.cpp  androidSdkOut.h
Hello/app/src/androidTest/java/com/wenwp/hello/: ExampleInstrumentedTest.java
Hello/app/src/main/: AndroidManifest.xml
Hello/app/src/main/cpp/: WlAndroidLog.h  native-lib.cpp
Hello/app/src/main/java/: com_wenwp_hello_MainActivity.h
Hello/app/src/main/java/com/wenwp/hello/: JniThread.java  MainActivity.java
Hello/app/src/test/java/com/wenwp/hello/: ExampleUnitTest.java
Hello/app/task/: JNIThreadPool.h  Task.cpp  Task.h  job.c  job.h
Hello/app/testexample2/: testcpool.cpp  testcpool.h  testcpp_pool.cpp  testcpp_pool.h
Hello/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  (+1 more)
app2/app/: build.gradle
dataencapok/app/: build.gradle
dataencapok/gradle/wrapper/: gradle-wrapper.properties
freedom/app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
jn3/app/: build.gradle
jni2/app/: build.gradle
jnidiy/app/: build.gradle
jnigo/app/: build.gradle
taskpoolinjni-callback/: CMakeLists.txt  main.cpp
taskpoolinjni-callback/task/: job.h  task.cpp
(+95 files in other folders)
